gobmkida/c2/is_suicide
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_suicide/src/engine/board.c:1590:24: error: use of undeclared identifier 'byte_9B389F'
v4 = ( unsigned __int8)byte_9B389F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_suicide/src/engine/board.c:1591:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[pos] 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_suicide/src/engine/board.c:1594:24: error: use of undeclared identifier 'byte_9B388C'
v5 = ( unsigned __int8)byte_9B388C[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_suicide/src/engine/board.c:1595:6: error: use of undeclared identifier 'byte_9B388C'
if ( byte_9B388C[pos] ) 
     ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_suicide/src/obj/1/board.o] Error 1
